# Control_of_Mobile_Robots

./: .gitignore  README.md
bicycle_sim/: CMakeLists.txt  package.xml
bicycle_sim/launch/: bicycle_sim.launch  test_bicycle_eight.launch  test_bicycle_simple.launch
bicycle_sim/src/: bicycle_sim.cpp  test_eight.cpp  test_eight_node.cpp  test_simple.cpp  test_simple_node.cpp
car_simulator/: CMakeLists.txt  README.txt  package.xml
car_simulator/config/: car_simulator.yaml
car_simulator/include/: car_ode.h
car_simulator/launch/: test_bicycle_simple.launch  test_car_simple.launch
car_simulator/src/: bicycle_sim.cpp  bicycle_sim_node.cpp  car_ode.cpp  car_sim.cpp  car_sim_node.cpp  test_simple_car.cpp  test_simple_car_node.cpp
car_traj_ctrl/: CMakeLists.txt  README.txt  package.xml
car_traj_ctrl/config/: car_traj_ctrl.yaml
car_traj_ctrl/include/: car_dyn_fblin.h
car_traj_ctrl/launch/: bicycle_kin_trajctrl.launch  car_dyn_trajctrl.launch
car_traj_ctrl/script/: 2024-01-25-12-11-41.bag  nuvoletta.bag  plot_results.py  shit but you know what not so bad.bag
car_traj_ctrl/src/: car_dyn_fblin.cpp  car_dyn_trajctrl.cpp  (+1 more)
linear_control/: CMakeLists.txt  package.xml
proportional_control/: CMakeLists.txt  package.xml
ros_basics/: CMakeLists.txt  README.txt  package.xml
ros_basics/config/: ros_basics_params.yaml
ros_basics/launch/: project.launch
ros_basics/src/: Counter.cpp  Sumup.cpp  System_Clock.cpp
simulator/: CMakeLists.txt  README.txt  package.xml
unicycle_dyn_sim/: CMakeLists.txt  package.xml
unicycle_kinematic/: CMakeLists.txt  package.xml
(+56 files in other folders)
